[package]
name = "abrw-2"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.18.1"
webkit2gtk = "2.0.1"
reqwest = { version = "0.11", features = ["blocking"] }
adblock = "0.8.12"
url = "2.5.2"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.6"
